# p3109-cpp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  p3109.cpp  p3109.h
.githooks/: pre-commit
.github/workflows/: ci.yml
_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  p3109_demo  test_abs  test_add  test_arith  test_atan2  test_compare_equal  test_compare_pred  test_decode  test_encode  test_exp_log  test_fma  test_format  test_hyp  test_inv_trig  test_is_zero  test_minmax  test_project_ops  test_sqrt  test_ternary  test_trig
ops/: Abs.h  Add.h  ArcCos.h  ArcCosPi.h  ArcCosh.h  ArcSin.h  ArcSinPi.h  ArcSinh.h  ArcTan.h  ArcTan2.h  ArcTan2Alt.h  ArcTan2Pi.h  ArcTanPi.h  ArcTanh.h  Clamp.h  CompareEqual.h  CompareGreater.h  CompareGreaterEqual.h  CompareLess.h  CompareLessEqual.h  Convert.h  ConvertFromIEEE754.h  ConvertToIEEE754.h  CopySign.h  Cos.h  CosPi.h  Cosh.h  Decode.h  Divide.h  Encode.h  Exp.h  Exp2.h  ExpMinusOne.h  FAA.h  FMA.h  Format.h  Hypot.h  IsOne.h  IsSignMinus.h  IsZero.h  (+29 more)
scripts/: run-sanitizers.sh
tests/: p3109_test.cpp  p3109_test_runner.h  test_abs.cpp  test_add.cpp  test_arith.cpp  test_atan2.cpp  test_compare_equal.cpp  test_compare_pred.cpp  test_convert.cpp  test_decode.cpp  test_encode.cpp  test_exp_log.cpp  test_fma.cpp  test_format.cpp  test_hyp.cpp  test_inv_trig.cpp  test_is_zero.cpp  test_minmax.cpp  test_project_ops.cpp  test_sqrt.cpp  test_ternary.cpp  test_trig.cpp  test_utils.cpp  test_utils.h
